# FileManager

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  parser.cpp  parser.h
common/: CMakeLists.txt  command.cpp  command.h  filemanager.cpp  filemanager.h
script/: install.sh
tests/: CMakeLists.txt  commandtests.cpp  commandtests.h  filemanagertests.cpp  filemanagertests.h  main.cpp
